--- a/SmartConvert/app/src/main/res/layout/fragment_tutorial2.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_tutorial2.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="group6.tcss450.uw.edu.smartconvert.TutorialFragment1">
+    tools:context="group6.tcss450.uw.edu.smartconvert.Tutorial2Fragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -12,29 +12,32 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/arrowTutorial1Button"
-            android:layout_width="49dp"
-            android:layout_height="45dp"
-            android:layout_marginRight="-2dp"
+            android:id="@+id/arrowTutorialRightButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="0dp"
             android:background="?android:attr/selectableItemBackground"
             android:text=">"
             android:textColor="@color/colorPrimary"
             android:textSize="36sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.498" />
 
-        <TextView
-            android:id="@+id/welcomeView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:gravity="center"
-            android:text="@string/welcome_string"
-            android:textSize="30sp"
+        <Button
+            android:id="@+id/arrowTutorialLeftButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="-10dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:text="&lt;"
+            android:textColor="@color/colorPrimary"
+            android:textSize="36sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.498" />
 
         <Button
             android:id="@+id/skipTutorialButton"
@@ -62,7 +65,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:checked="true"
                 android:enabled="false" />
 
             <RadioButton
@@ -70,6 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:checked="true"
                 android:enabled="false" />
 
             <RadioButton
@@ -80,4 +83,5 @@
                 android:enabled="false" />
         </RadioGroup>
     </android.support.constraint.ConstraintLayout>
+
 </FrameLayout>
