--- a/SmartConvert/app/src/main/res/layout/fragment_tutorial1.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_tutorial1.xml
@@ -11,6 +11,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/descriptionView"
+            android:layout_width="275dp"
+            android:layout_height="126dp"
+            android:layout_marginTop="46dp"
+            android:gravity="center"
+            android:text="@string/description_string"
+            android:textSize="18sp"
+            app:layout_constraintHorizontal_bias="0.504"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/welcomeView" />
+
         <Button
             android:id="@+id/arrowTutorialRightButton"
             android:layout_width="50dp"
@@ -29,13 +42,14 @@
             android:id="@+id/welcomeView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="75dp"
             android:gravity="center"
             android:text="@string/welcome_string"
             android:textSize="30sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.505" />
 
         <Button
             android:id="@+id/skipTutorialButton"
