--- a/SmartConvert/app/src/main/res/layout/fragment_convert.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_convert.xml
@@ -11,10 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Spinner
+        <EditText
             android:id="@+id/CurrencyASpinner"
             android:layout_width="111dp"
-            android:layout_height="23dp"
+            android:layout_height="45dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
@@ -23,12 +23,13 @@
             app:layout_constraintHorizontal_bias="0.092"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/Currency1" />
 
-        <Spinner
+        <EditText
             android:id="@+id/CurrencyBSpinner"
             android:layout_width="111dp"
-            android:layout_height="23dp"
+            android:layout_height="45dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="8dp"
@@ -38,12 +39,13 @@
             app:layout_constraintLeft_toRightOf="@+id/CurrencyASpinner"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="257dp" />
+            tools:layout_editor_absoluteX="238dp"
+            tools:text="@string/Currency2" />
 
         <EditText
             android:id="@+id/NumCurrAField"
             android:layout_width="111dp"
-            android:layout_height="36dp"
+            android:layout_height="45dp"
             android:layout_marginEnd="16dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="16dp"
@@ -51,7 +53,7 @@
             android:layout_marginTop="8dp"
             android:ems="10"
             android:inputType="number"
-            app:layout_constraintHorizontal_bias="0.941"
+            app:layout_constraintHorizontal_bias="0.933"
             app:layout_constraintLeft_toLeftOf="@+id/NumCurrBField"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/CurrencyBSpinner" />
@@ -59,13 +61,14 @@
         <EditText
             android:id="@+id/NumCurrBField"
             android:layout_width="111dp"
-            android:layout_height="36dp"
+            android:layout_height="45dp"
             android:layout_marginEnd="16dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:ems="10"
             android:inputType="number"
+            android:text="@string/Value1"
             app:layout_constraintHorizontal_bias="0.093"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
