--- a/SmartConvert/app/src/main/res/layout/content_main.xml
+++ b/SmartConvert/app/src/main/res/layout/content_main.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="group6.tcss450.uw.edu.smartconvert.MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    tools:showIn="@layout/app_bar_main"
+    android:background="@drawable/background">
 
 </FrameLayout>
