--- a/SmartConvert/app/src/main/res/layout/fragment_start.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_start.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="group6.tcss450.uw.edu.smartconvert.StartFrag"
-    android:background="@drawable/smart_convert">
+    tools:context="group6.tcss450.uw.edu.smartconvert.StartFrag">
+
+    <!-- TODO: Update blank fragment layout -->
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -42,7 +43,7 @@
             app:layout_constraintLeft_toRightOf="@+id/skipLoginButton"
             app:layout_constraintTop_toBottomOf="@+id/loginStartButton" />
 
-<!--        <TextView
+        <TextView
             android:id="@+id/appNameView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -51,7 +52,7 @@
             app:layout_constraintBottom_toTopOf="@+id/loginStartButton"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />-->
+            app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
