Added new background. Changed UI colors. Unfinished.

--- a/SmartConvert/app/src/main/res/layout/fragment_confirm_email.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_confirm_email.xml
@@ -16,6 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/confirm_email_title_string"
+            android:textColor="@android:color/black"
             android:textSize="36sp"
             app:layout_constraintBottom_toTopOf="@+id/verificationView"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -26,8 +27,10 @@
             android:id="@+id/verificationField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableBottom="@android:color/black"
             android:ems="10"
             android:inputType="textPersonName"
+            android:textColor="@android:color/holo_orange_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -41,6 +44,7 @@
             android:layout_marginLeft="0dp"
             android:layout_marginStart="8dp"
             android:text="@string/verification_code_string"
+            android:textColor="@android:color/black"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/verificationField"
             app:layout_constraintLeft_toLeftOf="@+id/verificationField" />
