--- a/SmartConvert/app/src/main/res/layout/fragment_convert.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_convert.xml
@@ -20,6 +20,8 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="0dp"
             android:layout_marginTop="56dp"
+            android:drawableBottom="@android:color/black"
+            android:textColor="@android:color/black"
             app:layout_constraintHorizontal_bias="0.092"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -35,6 +37,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="0dp"
             android:layout_marginTop="56dp"
+            android:drawableBottom="@android:color/black"
             app:layout_constraintHorizontal_bias="0.818"
             app:layout_constraintLeft_toRightOf="@+id/CurrencyASpinner"
             app:layout_constraintRight_toRightOf="parent"
@@ -51,8 +54,10 @@
             android:layout_marginRight="16dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:drawableBottom="@android:color/black"
             android:ems="10"
             android:inputType="number"
+            android:textColor="@android:color/holo_orange_light"
             app:layout_constraintHorizontal_bias="0.933"
             app:layout_constraintLeft_toLeftOf="@+id/NumCurrBField"
             app:layout_constraintRight_toRightOf="parent"
@@ -66,9 +71,11 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
+            android:drawableBottom="@android:color/black"
             android:ems="10"
             android:inputType="number"
             android:text="@string/Value1"
+            android:textColor="@android:color/holo_orange_light"
             app:layout_constraintHorizontal_bias="0.093"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
