--- a/SmartConvert/app/src/main/res/layout/fragment_login.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_login.xml
@@ -16,9 +16,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:drawableBottom="@android:color/black"
             android:ems="10"
             android:hint="@string/password_string"
             android:inputType="textPassword"
+            android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/usernameField" />
@@ -27,9 +30,12 @@
             android:id="@+id/usernameField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableBottom="@android:color/black"
             android:ems="10"
             android:hint="@string/username_string"
             android:inputType="textPersonName"
+            android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
