--- a/SmartConvert/app/src/main/res/layout/fragment_start.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_start.xml
@@ -48,7 +48,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
+            android:textColor="@android:color/black"
             android:textSize="30sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/loginStartButton"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
