--- a/SmartConvert/app/src/main/res/layout/fragment_tutorial1.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_tutorial1.xml
@@ -18,6 +18,7 @@
             android:layout_marginTop="46dp"
             android:gravity="center"
             android:text="@string/description_string"
+            android:textColor="@android:color/black"
             android:textSize="18sp"
             app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -45,11 +46,12 @@
             android:layout_marginTop="75dp"
             android:gravity="center"
             android:text="@string/welcome_string"
+            android:textColor="@android:color/black"
             android:textSize="30sp"
+            app:layout_constraintHorizontal_bias="0.505"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.505" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/skipTutorialButton"
