--- a/SmartConvert/app/src/main/res/layout/fragment_tutorial2.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_tutorial2.xml
@@ -88,10 +88,11 @@
             android:layout_width="145dp"
             android:layout_height="19dp"
             android:layout_marginBottom="8dp"
+            android:layout_marginRight="16dp"
             android:gravity="center"
             android:text="@string/euro_curr_string"
+            android:textColor="@android:color/black"
             app:layout_constraintBottom_toTopOf="@+id/currBFormTutorial"
-            android:layout_marginRight="16dp"
             app:layout_constraintRight_toRightOf="parent" />
 
         <Button
@@ -112,12 +113,14 @@
             android:layout_height="39dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="87dp"
+            android:drawableBottom="@android:color/black"
             android:editable="false"
             android:ems="10"
             android:enabled="false"
             android:gravity="center"
             android:inputType="textPersonName"
             android:text="@string/example_amount_2_string"
+            android:textColor="@android:color/holo_orange_light"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -127,6 +130,7 @@
             android:layout_height="39dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="87dp"
+            android:drawableBottom="@android:color/black"
             android:editable="false"
             android:ems="10"
             android:enabled="false"
@@ -134,6 +138,7 @@
             android:gravity="center"
             android:inputType="textPersonName"
             android:text="@string/example_amount_1_string"
+            android:textColor="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -142,10 +147,11 @@
             android:layout_width="145dp"
             android:layout_height="19dp"
             android:layout_marginBottom="8dp"
+            android:layout_marginLeft="16dp"
             android:gravity="center"
             android:text="@string/american_curr_string"
+            android:textColor="@android:color/black"
             app:layout_constraintBottom_toTopOf="@+id/currAFormTutorial"
-            android:layout_marginLeft="16dp"
             app:layout_constraintLeft_toLeftOf="parent" />
 
         <TextView
