--- a/SmartConvert/app/src/main/res/layout/fragment_convert.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_convert.xml
@@ -11,24 +11,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <EditText
+        <Spinner
             android:id="@+id/CurrencyASpinner"
             android:layout_width="111dp"
             android:layout_height="45dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginLeft="0dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="0dp"
             android:layout_marginTop="56dp"
-            android:drawableBottom="@android:color/black"
-            android:textColor="@android:color/black"
-            app:layout_constraintHorizontal_bias="0.092"
+            app:layout_constraintHorizontal_bias="0.066"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="@string/Currency1" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
+        <Spinner
             android:id="@+id/CurrencyBSpinner"
             android:layout_width="111dp"
             android:layout_height="45dp"
@@ -37,61 +34,64 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="0dp"
             android:layout_marginTop="56dp"
-            android:drawableBottom="@android:color/black"
-            app:layout_constraintHorizontal_bias="0.818"
+            app:layout_constraintHorizontal_bias="0.882"
             app:layout_constraintLeft_toRightOf="@+id/CurrencyASpinner"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="238dp"
-            tools:text="@string/Currency2" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/NumCurrAField"
             android:layout_width="111dp"
             android:layout_height="45dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="16dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:drawableBottom="@android:color/black"
             android:ems="10"
             android:inputType="number"
-            android:textColor="@android:color/holo_orange_light"
-            app:layout_constraintHorizontal_bias="0.933"
-            app:layout_constraintLeft_toLeftOf="@+id/NumCurrBField"
+            android:layout_marginTop="11dp"
+            app:layout_constraintTop_toBottomOf="@+id/CurrencyASpinner"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.0"
+            android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/CurrencyBSpinner" />
+            app:layout_constraintHorizontal_bias="0.031" />
 
-        <EditText
+        <TextView
             android:id="@+id/NumCurrBField"
             android:layout_width="111dp"
             android:layout_height="45dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:drawableBottom="@android:color/black"
+            android:layout_marginTop="0dp"
             android:ems="10"
             android:inputType="number"
-            android:text="@string/Value1"
-            android:textColor="@android:color/holo_orange_light"
-            app:layout_constraintHorizontal_bias="0.093"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.968"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/CurrencyASpinner" />
+            app:layout_constraintTop_toBottomOf="@+id/CurrencyBSpinner"
+            app:layout_constraintVertical_bias="0.039" />
 
         <Button
             android:id="@+id/convertCurrButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="79dp"
             android:text="@string/convert_string"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toRightOf="@+id/NumCurrBField"
-            app:layout_constraintRight_toLeftOf="@+id/NumCurrAField"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintVertical_bias="0.232"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent" />
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
