--- a/SmartConvert/app/src/main/res/layout/fragment_confirm_email.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_confirm_email.xml
@@ -29,7 +29,8 @@
             android:layout_height="wrap_content"
             android:drawableBottom="@android:color/black"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:hint="@string/verificationCodeHint"
+            android:inputType="text"
             android:textColor="@android:color/holo_orange_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
