--- a/SmartConvert/app/src/main/res/layout/fragment_convert.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_convert.xml
@@ -43,20 +43,21 @@
             android:id="@+id/NumCurrAField"
             android:layout_width="111dp"
             android:layout_height="45dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="8dp"
-            android:ems="10"
-            android:inputType="number"
-            android:layout_marginTop="11dp"
-            app:layout_constraintTop_toBottomOf="@+id/CurrencyASpinner"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
-            app:layout_constraintVertical_bias="0.0"
+            android:layout_marginEnd="16dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="11dp"
+            android:ems="10"
+            android:hint="@string/amount"
+            android:inputType="number"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.031"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.031" />
+            app:layout_constraintTop_toBottomOf="@+id/CurrencyASpinner"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/NumCurrBField"
