--- a/SmartConvert/app/src/main/res/layout/fragment_register.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_register.xml
@@ -44,6 +44,7 @@
             android:layout_marginTop="-1dp"
             android:drawableBottom="@android:color/black"
             android:ems="10"
+            android:hint="@string/fname_hint"
             android:inputType="textPersonName"
             android:textColor="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -58,6 +59,7 @@
             android:layout_marginTop="74dp"
             android:drawableBottom="@android:color/black"
             android:ems="10"
+            android:hint="@string/lname_hint"
             android:inputType="textPersonName"
             android:textColor="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -98,6 +100,7 @@
             android:layout_marginTop="0dp"
             android:drawableBottom="@android:color/black"
             android:ems="10"
+            android:hint="@string/email_hint"
             android:inputType="textEmailAddress"
             android:textColor="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -125,6 +128,7 @@
             android:layout_marginTop="0dp"
             android:drawableBottom="@android:color/black"
             android:ems="10"
+            android:hint="@string/password_hint"
             android:inputType="textPassword"
             android:textColor="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -152,6 +156,7 @@
             android:layout_marginTop="0dp"
             android:drawableBottom="@android:color/black"
             android:ems="10"
+            android:hint="@string/password_hint"
             android:inputType="textPassword"
             android:textColor="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
