--- a/SmartConvert/app/src/main/res/layout/fragment_login.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_login.xml
@@ -45,6 +45,7 @@
             android:id="@+id/submitButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginTop="8dp"
             android:text="@string/submit_string"
