--- a/SmartConvert/app/src/main/res/layout/fragment_home.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_home.xml
@@ -43,13 +43,12 @@
             android:layout_marginEnd="16dp" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/currentLocationText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
-            android:text="Show current loc"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="parent"
