Revert "Merge branch 'master' of https://github.com/dmuffler/TCSS_450_App"
This reverts commit 333b52a6824dee270dd526a86fb6bdd1fe9cd5e4, reversing
changes made to 9549a05f28173e33b19875391602c7503826e889.

--- a/SmartConvert/app/src/main/res/layout/fragment_login.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_login.xml
@@ -19,6 +19,8 @@
             android:ems="10"
             android:hint="@string/password_string"
             android:inputType="textPassword"
+            android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/usernameField" />
@@ -31,6 +33,8 @@
             android:ems="10"
             android:hint="@string/username_string"
             android:inputType="textPersonName"
+            android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
