--- a/SmartConvert/app/src/main/res/layout/fragment_confirm_email.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_confirm_email.xml
@@ -30,7 +30,8 @@
             android:ems="10"
             android:hint="@string/verificationCodeHint"
             android:inputType="text"
-
+            android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
