--- a/SmartConvert/app/src/main/res/layout/fragment_convert.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_convert.xml
@@ -52,6 +52,8 @@
             android:gravity="center_horizontal"
             android:hint="@string/amount"
             android:inputType="number"
+            android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.031"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -72,6 +74,8 @@
             android:gravity="center_horizontal"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.968"
@@ -101,6 +105,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="->"
+            android:textColor="@android:color/holo_orange_light"
             android:textSize="24sp"
             app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintLeft_toLeftOf="parent"
