--- a/SmartConvert/app/src/main/res/layout/fragment_register.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_register.xml
@@ -46,6 +46,8 @@
             android:ems="10"
             android:hint="@string/fname_hint"
             android:inputType="textPersonName"
+            android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nameFirstView" />
 
@@ -60,6 +62,8 @@
             android:ems="10"
             android:hint="@string/lname_hint"
             android:inputType="textPersonName"
+            android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nameFirstView" />
 
@@ -102,6 +106,8 @@
             android:ems="10"
             android:hint="@string/email_hint"
             android:inputType="textEmailAddress"
+            android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/emailView" />
 
@@ -130,6 +136,8 @@
             android:ems="10"
             android:hint="@string/password_hint"
             android:inputType="textPassword"
+            android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/passRegView" />
 
@@ -158,6 +166,8 @@
             android:ems="10"
             android:hint="@string/password_hint"
             android:inputType="textPassword"
+            android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/confirmPassRegView" />
     </android.support.constraint.ConstraintLayout>
