--- a/SmartConvert/app/src/main/res/layout/fragment_tutorial2.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_tutorial2.xml
@@ -17,6 +17,7 @@
             android:layout_marginRight="0dp"
             android:background="?android:attr/selectableItemBackground"
             android:text=">"
+            android:textColor="@android:color/holo_orange_light"
             android:textSize="36sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -30,6 +31,7 @@
             android:layout_marginLeft="-10dp"
             android:background="?android:attr/selectableItemBackground"
             android:text="&lt;"
+            android:textColor="@android:color/holo_orange_light"
             android:textSize="36sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -44,6 +46,7 @@
             android:layout_marginRight="16dp"
             android:background="?android:attr/selectableItemBackground"
             android:text="@string/skip_string"
+            android:textColor="@android:color/holo_orange_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
 
@@ -116,6 +119,7 @@
             android:gravity="center"
             android:inputType="textPersonName"
             android:text="@string/example_amount_2_string"
+            android:textColor="@android:color/holo_orange_light"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginTop="30dp"
             app:layout_constraintTop_toBottomOf="@+id/currBTutorialView" />
@@ -133,6 +137,7 @@
             android:gravity="center"
             android:inputType="textPersonName"
             android:text="@string/example_amount_1_string"
+            android:textColor="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="30dp"
             app:layout_constraintTop_toBottomOf="@+id/currATutorialView" />
@@ -156,6 +161,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="->"
+            android:textColor="@android:color/holo_orange_light"
             android:textSize="24sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
