--- a/SmartConvert/app/src/main/res/layout/fragment_tutorial3.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_tutorial3.xml
@@ -17,6 +17,7 @@
             android:layout_marginLeft="-10dp"
             android:background="?android:attr/selectableItemBackground"
             android:text="&lt;"
+            android:textColor="@android:color/holo_orange_light"
             android:textSize="36sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -31,6 +32,7 @@
             android:layout_marginRight="16dp"
             android:background="?android:attr/selectableItemBackground"
             android:text="@string/skip_string"
+            android:textColor="@android:color/holo_orange_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
 
@@ -80,6 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:editable="false"
                 android:text="@string/end_tutorial_first_string"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -92,6 +95,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:editable="false"
                 android:text="@string/end_tutorial_second_string"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -101,6 +105,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:editable="false"
                 android:text="@string/end_tutorial_third_string"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -110,6 +115,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:editable="false"
                 android:text="@string/end_tutorial_fourth_string"
                 android:textSize="18sp"
                 android:textStyle="bold" />
